--- a/public/style.css
+++ b/public/style.css
@@ -11,12 +11,12 @@
     --btnHover: #2980B9;
     --shadow: 0 4px 15px rgba(44, 62, 80, 0.08);
 }
-html {font-size: clamp(1rem, 0.75rem + 1.5vw, 2rem);}
-
-body {
-     height: 100vh;
+html {scroll-behavior: smooth;}
+body {font-size: clamp(1rem, 1.5vw + 0.5rem, 1.5rem);
+    height: 100vh;
     margin: 0;
-    line-height: 1.6;
+    line-height: 1.2;
+    font-weight: 500;
     padding: 0;
     background-color: var(--primaryColor);
     color: var(--mainText);
@@ -37,39 +37,30 @@ nav {
     background-color: var(--primaryColor);
     z-index: 500;
     top: 0;
-     width: 30%;
+     width: 50vw;
     top: 0;
     left: -30000px;
-    padding: 1.5rem 0;
+    padding: 5rem 0 0 0;
     text-align: center;
     border-bottom: 1px solid #E0E7ED;
     height: 500px;
-}
-nav.show {
+}nav.show {
     left: 0;
 }
-
-
-
 i {
     background: transparent;
-}
-i:hover {
+}i:hover {
     color: var(--btnHover);
-}
-li {
+}li {
     list-style-type: none;
     padding: 10px;
-}
-li a {
+}li a {
     color: var(--mainText);
     margin:  0 1.5rem;
     transition: color 0.3s ease;
-}
-li a:hover {
+}li a:hover {
     color: var(--accentColor);
 }
-
 /* Main content and section style */
 main { 
     max-width: 900px;
@@ -82,63 +73,94 @@ main {
     margin-bottom: 2rem;
     border-radius: 8px;
     box-shadow: var(--shadow);
+}p {text-align: justify;
 }
 /* Heading & Links and button*/
 h1, h2, h3 {
     color: var(--accentColor);
     text-align: center;
     font-weight: 600;
-}
- a {
+    text-transform: capitalize;
+    margin-bottom: 1.5rem;
+}a {
   font-weight: bold;
     color: var(--accentColor);
     text-decoration: none;
-}
-a:hover {
+}a:hover {
     text-decoration: underline;
 }
-
+ 
 /*   nav toggle button */
 #toggleBtn { display: block;
+    font-size: 1.5rem;
     background: transparent;
     outline: none;
     border: none;
-/*     font-size: 2rem;
- */    margin: 1rem 2rem 0 auto;
+    margin: 1rem 2rem 0 auto;
     cursor: pointer;
     color: var(a);
     transition: transform 0.3s ease;
-}
-#toggleBtn:hover {
+}#toggleBtn:hover {
     transform: rotate(90deg);
 }
-.button {
+ a#button {
     background-color: var(--accentColor);
     color: var(--white);
-    padding: 12px 24px;
+    padding: 12px 15px;
     border-radius: 50px;
     text-decoration: none;
     display: inline-block;
     font-weight: bold;
+    text-align: center;
+    font-size: 1rem;
     transition: background-color 0.3s ease, transform 0.3s ease;
+    margin: 0 auto;
+}#button:hover{background-color: var(--btnHover); transform: translateY(-2px);}
+.btns {margin-top: 1rem;display: flex; flex-flow: row wrap;  gap: 30px;}
+/* Footer and links */
+footer {
+    
+     text-align: center;
+    padding: 10px;
+    width: 100vw;
+    background-color: #2C3E50;
+    height: 200px;
 }
-.button:hover {
-    background-color: var(--btnHover);
-    transform: translateY(-2px);
+footer .footP { display: unset;
+    justify-self: baseline; justify-items: flex-end;
 }
-@media (max-width: 768px) {
-    main {
-        padding: 10px;
-    }
+footer p {
+    color: var(--secondaryColor);
+    margin-top: 2rem;
+    font-weight: bold;
+    text-align: center;
+    font-size:clamp(.7rem, 1.5vw + 0.5rem, 1.5rem);
 }
-/* @media screen  and (min-width: 900px) {
-    h1 {font-size: 2.8rem;}
-    h2 {font-size: 2rem;}
-} */
-@media screen and (min-width:1024px) {
-    #toggleBtn { display: none;
-    right: 99333300;
+footer i {
+    font-size: 1.5rem;
+    color: var(--primaryColor);
 }
+footer i:hover {
+    color: var(--accentColor);
+}
+#socialLink {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 2rem auto;
+    gap: 50px;
+    box-sizing: border-box;
+ }
+/* image */
+img {
+    display: block;
+    height: auto;
+    width: 100%;border-radius: 10px; max-width: 400px;
+    box-sizing: border-box;box-shadow: var(--shadow);
+} .contentBox { width: fit-content;margin-bottom: 1.5rem;}
+@media (max-width: 768px) {main {padding: 10px;}}
+@media screen and (min-width:1024px) {#toggleBtn { display: none;}
 nav {
     position: unset;
     background-color: var(--primaryColor);
@@ -147,18 +169,20 @@ nav {
      width: 100vw;
     left: unset;
     padding: unset;
-    text-align: center;
-    border-bottom: 1px solid #E0E7ED;
-    height: unset;
+     height: unset;
 }
-header {
-    height: auto !important;
+header {height: auto !important;}
+nav ul li {display: inline-block;flex-direction: row;}
+nav.show {left: 0;}
+
+img { max-width: unset;
+    min-width: 450px;
 }
-nav ul li {
-    display: inline-block;
-    flex-direction: row;
+#intro {
+    display: flex; align-items: flex-start;grid-area: 20px;
 }
-nav.show {
-    left: 0;
-}
+.contentBox {flex: 1;} .profileImg{flex: 1;}.profileImg img.img{width: 100%; height: auto; }
+ footer i {
+    font-size: 2rem;
+ }
 }
